--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               >
             </li>
           </ul>
-          <button class="header__btn-menu" type="button" data-menu-open>
+          <button class="menu-toggle js-open-menu" type="button">
             <svg
               aria-label="перемікач мобільного меню"
               class="header__icon-menu"
@@ -66,62 +66,66 @@
           </button>
         </div>
       </div>
-      <div class="menu is-hidden" data-menu>
+      <div class="menu-container js-menu-container">
         <div class="menu-wrapper">
-          <button class="header__btn-close" type="button" data-menu-close>
-          <svg
-            aria-label="перемікач мобільного меню"
-            class="header__icon-menu"
-            width="40"
-            height="40"
-          >
-            <use class="icon-cross" href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <nav class="menu__nav">
-          <ul class="menu__list list">
-            <li class="menu__item">
-              <a class="menu__link" href="./index.html">Студія</a>
+          <button class="menu-toggle js-close-menu" type="button">
+            <svg
+              aria-label="перемікач мобільного меню"
+              class="header__icon-menu"
+              width="40"
+              height="40"
+            >
+              <use
+                class="icon-cross"
+                href="./images/icons.svg#icon-close"
+              ></use>
+            </svg>
+          </button>
+          <nav class="menu__nav">
+            <ul class="menu__list list">
+              <li class="menu__item">
+                <a class="menu__link" href="./index.html">Студія</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./portfolio.html">Портфоліо</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="menu__contacts list">
+            <li class="menu__contacts-item">
+              <a class="menu__contacts-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#">Контакти</a>
+            <li class="menu__contacts-item">
+              <a
+                class="menu__contacts-link menu__contact-mail"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
           </ul>
-        </nav>
-        <ul class="menu__contacts list">
-          <li class="menu__contacts-item">
-            <a class="menu__contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-          <li class="menu__contacts-item">
-            <a
-              class="menu__contacts-link menu__contact-mail"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-        </ul>
-        <ul class="social-list list">
-          <li class="social-list__item">
-            <a class="social-list__link between" href="#">Instagram</a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link between" href="#">Twitter</a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link between" href="#">Facebook</a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link" href="#">LinkedIn</a>
-          </li>
-        </ul></div>
+          <ul class="social-list list">
+            <li class="social-list__item">
+              <a class="social-list__link between" href="#">Instagram</a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link between" href="#">Twitter</a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link between" href="#">Facebook</a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="#">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
- <main>
+    <main>
       <!-- шапка -->
       <section class="hero">
         <div class="container">
@@ -221,17 +225,28 @@
           </ul>
         </div>
       </section>
-
       <!-- команда -->
       <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__workers">
+              <picture>
+                <source
+                  srcset="./images/person1.jpg 1x, ./images/person1-2x.jpg 2x"
+                  media="(min-width: 1200px)"/>
+                <source
+                  srcset="./images/person1-tab.jpg 1x, ./images/person1-tab2x.jpg 2x"
+                  media="(min-width: 768px)"/>
+                <source 
+                srcset="./images/person1-mob.jpg 1x, ./images/person1-mob2x.jpg 2x"
+                  media="(max-width: 767px)"/>
+              </picture>
               <img
                 class="team__photo"
+                srcset="./images/person1.jpg 1x, ./images/person1-2x.jpg 2x"
                 src="./images/person1.jpg"
-                width="270"
+                width="450"
                 alt="працівник"
               />
               <div class="team__content">
@@ -269,10 +284,24 @@
               </div>
             </li>
             <li class="team__workers">
+              <picture>
+                <source
+                  srcset="./images/person2.jpg 1x, ./images/person2-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/person2-tab.jpg 1x, ./images/person2-tab2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source 
+                srcset="./images/person2-mob.jpg 1x, ./images/person2-mob2x.jpg 2x"
+                  media="(max-width: 767px)"/>
+              </picture>
               <img
                 class="team__photo"
+                srcset="./images/person2.jpg 1x, ./images/person2-2x.jpg 2x"
                 src="./images/person2.jpg"
-                width="270"
+                width="450"
                 alt="працівник"
               />
               <div class="team__content">
@@ -309,10 +338,24 @@
               </div>
             </li>
             <li class="team__workers">
+              <picture>
+                <source
+                  srcset="./images/person3.jpg 1x, ./images/person3-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/person3-tab.jpg 1x, ./images/person3-tab2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source 
+                srcset="./images/person3-mob.jpg 1x, ./images/person3-mob2x.jpg 2x"
+                  media="(max-width: 767px)"/>
+              </picture>
               <img
                 class="team__photo"
+                srcset="./images/person3.jpg 1x, ./images/person3-2x.jpg 2x"
                 src="./images/person3.jpg"
-                width="270"
+                width="450"
                 alt="працівник"
               />
               <div class="team__content">
@@ -349,10 +392,24 @@
               </div>
             </li>
             <li class="team__workers">
+              <picture>
+                <source
+                  srcset="./images/person4.jpg 1x, ./images/person4-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/person4-tab.jpg 1x, ./images/person4-tab2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source 
+                srcset="./images/person4-mob.jpg 1x, ./images/person4-mob2x.jpg 2x"
+                  media="(max-width: 767px)"/>
+              </picture>
               <img
                 class="team__photo"
+                srcset="./images/person4.jpg 1x, ./images/person4-2x.jpg 2x"
                 src="./images/person4.jpg"
-                width="270"
+                width="450"
                 alt="працівник"
               />
               <div class="team__content">
@@ -391,7 +448,6 @@
           </ul>
         </div>
       </section>
-
       <!-- Постійні клієнти -->
       <section class="clients">
         <div class="container">
@@ -589,6 +645,7 @@
       </div>
     </div>
     <script src="./madal.js"></script>
-    <script src="./menu.js"></script>
+    <script src="./mobile-menu.js"></script>
+    <!-- <script src="./menu.js"></script> -->
   </body>
 </html>
