--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,15 @@
       <div class="container">
         <div class="header__main-nav header-border">
           <a class="logo" href="./"
-            >Web<span class="logo__studio">Studio</span></a>
+            >Web<span class="logo__studio">Studio</span></a
+          >
           <nav>
             <ul class="site-nav list">
               <li class="site-nav__item">
                 <a class="site-nav__link" href="./index.html">Студія</a>
               </li>
-              <li class="site-nav__item">
-                <a class="site-nav__link current" href="./portfolio.html">Портфоліо</a>
+              <li class="site-nav__item current" >
+                <a class="site-nav__link" href="./portfolio.html">Портфоліо</a>
               </li>
               <li class="site-nav__item">
                 <a class="site-nav__link" href="./contacts.html">Контакти</a>
@@ -50,6 +51,77 @@
                 </svg>
                 +38 096 111 11 11</a
               >
+            </li>
+          </ul>
+          <button class="menu-toggle js-open-menu" 
+          type="button"  
+          aria-expanded="false"
+          aria-controls="mobile-menu">
+            <svg
+              aria-label="перемікач мобільного меню"
+              class="header__icon-menu"
+              width="40"
+              height="40"
+            >
+              <use class="icon-menu" href="./images/menu.svg#icon-menu"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <div class="menu-wrapper">
+          <button class="menu-toggle js-close-menu" type="button">
+            <svg
+              aria-label="перемікач мобільного меню"
+              class="header__icon-menu"
+              width="40"
+              height="40"
+            >
+              <use
+                class="icon-cross"
+                href="./images/icons.svg#icon-close"
+              ></use>
+            </svg>
+          </button>
+          <nav class="menu__nav">
+            <ul class="menu__list list">
+              <li class="menu__item">
+                <a class="menu__link" href="./index.html">Студія</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="./portfolio.html">Портфоліо</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="menu__contacts list">
+            <li class="menu__contacts-item">
+              <a class="menu__contacts-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+            <li class="menu__contacts-item">
+              <a
+                class="menu__contacts-link menu__contact-mail"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="social-list list">
+            <li class="social-list__item">
+              <a class="social-list__link between" href="#">Instagram</a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link between" href="#">Twitter</a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link between" href="#">Facebook</a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="#">LinkedIn</a>
             </li>
           </ul>
         </div>
@@ -362,5 +434,6 @@
        </div>
       </div>
     </footer>
+    <script src="./mobile-menu.js"></script>
   </body>
 </html>
