--- a/portfolio.html
+++ b/portfolio.html
@@ -153,13 +153,19 @@
             <li class="cards">
               <a class="portfolio-card" href="#">
                 <div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project1.jpg 1x, ./images/project1-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project1-tab.jpg 1x, ./images/project1-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project1-mob.jpg 1x, ./images/project1-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project1.jpg"
                     width="370"
                     height="294"
                     alt="ноутбук"
                   />
+                  </picture>
+                  
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -177,13 +183,18 @@
             <li class="cards">
               <a class="portfolio-card" href="#">
                 <div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project2.jpg 1x, ./images/project2-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project2-tab.jpg 1x, ./images/project2-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project2-mob.jpg 1x, ./images/project2-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project2.jpg"
                     width="370"
                     height="294"
-                    alt="баскетбол"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -201,14 +212,19 @@
             <li class="cards">
               <a class="portfolio-card" href="#">
                 <div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project3.jpg 1x, ./images/project3-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project3-tab.jpg 1x, ./images/project3-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project3-mob.jpg 1x, ./images/project3-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project3.jpg"
                     width="370"
                     height="294"
-                    alt="ресторан"
+                    alt="ноутбук"
                   />
-                  <p class="portfolio-wrapper">
+                  </picture>
+                    <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
@@ -223,13 +239,18 @@
             <li class="cards">
               <a class="portfolio-card" href="#">
                 <div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project4.jpg 1x, ./images/project4-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project4-tab.jpg 1x, ./images/project4-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project4-mob.jpg 1x, ./images/project4-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project4.jpg"
                     width="370"
                     height="294"
-                    alt="навушники"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -245,13 +266,18 @@
             <li class="cards">
               <a class="portfolio-card" href="#">
                 <div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project5.jpg 1x, ./images/project5-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project5-tab.jpg 1x, ./images/project5-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project5-mob.jpg 1x, ./images/project5-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project5.jpg"
                     width="370"
                     height="294"
-                    alt="коробки"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -267,13 +293,18 @@
             <li class="cards">
               <a class="portfolio-card" href="#"
                 ><div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project6.jpg 1x, ./images/project6-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project6-tab.jpg 1x, ./images/project6-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project6-mob.jpg 1x, ./images/project6-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project6.jpg"
                     width="370"
                     height="294"
-                    alt="монітор"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -289,13 +320,18 @@
             <li class="cards">
               <a class="portfolio-card" href="#"
                 ><div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project7.jpg 1x, ./images/project7-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project7-tab.jpg 1x, ./images/project7-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project7-mob.jpg 1x, ./images/project7-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project7.jpg"
                     width="370"
                     height="294"
-                    alt="журнал"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -311,13 +347,18 @@
             <li class="cards">
               <a class="portfolio-card" href="#"
                 ><div class="wrap">
-                  <img
+                 <picture>
+                    <source srcset="./images/project8.jpg 1x, ./images/project8-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project8-tab.jpg 1x, ./images/project8-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project8-mob.jpg 1x, ./images/project8-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project8.jpg"
                     width="370"
                     height="294"
-                    alt="етикетка"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -330,17 +371,21 @@
                 </div></a
               >
             </li>
-
             <li class="cards">
               <a class="portfolio-card" href="#"
                 ><div class="wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/project9.jpg 1x, ./images/project9-2x.jpg 2x" media="(min-width: 1200px)">
+                    <source srcset="./images/project9-tab.jpg 1x, ./images/project9-tab2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/project9-mob.jpg 1x, ./images/project9-mob2x.jpg 2x" media="(min-width: 480px)">
+                    <img
                     class="portfolio-img"
                     src="./images/project9.jpg"
                     width="370"
                     height="294"
-                    alt="компьютер"
+                    alt="ноутбук"
                   />
+                  </picture>
                   <p class="portfolio-wrapper">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
